--- a/eval_configs/env_vars/env_vars.yaml
+++ b/eval_configs/env_vars/env_vars.yaml
@@ -1,8 +1,8 @@
-save_path: /PATH/TO/SAVE/RESULTS  # e.g. root directory of this repo
+save_path: rollouts  # e.g. root directory of this repo
 wandb_entity: YOUR_WANDB_ENTITY  # e.g. your wandb username
 
 
-dataset_root: /PATH/TO/DATASET/ROOT  # e.g. set this to the unzipped directory of all datasets
+dataset_root: /scr/shared/dynamo_repro_datasets # e.g. set this to the unzipped directory of all datasets
 
 datasets:
     pusht: ${env_vars.dataset_root}/pusht_dataset
